[gd_scene load_steps=17 format=3 uid="uid://d177n80yabv6n"]

[ext_resource type="Script" path="res://entities/arthur/arthur.gd" id="1_rodkt"]
[ext_resource type="Texture2D" uid="uid://b81r2hk0al0wd" path="res://assets/arthur/arthur_idle_1.png" id="2_cng82"]
[ext_resource type="Texture2D" uid="uid://blimr1515fl8n" path="res://assets/arthur/arthur_fall.png" id="2_wwdx4"]
[ext_resource type="Texture2D" uid="uid://dbdtiaglr1ro8" path="res://assets/arthur/arthur_idle_2.png" id="3_0c3qb"]
[ext_resource type="PackedScene" uid="uid://cvpkfp4tvqwfs" path="res://components/plateformer/gravity/gravity_component.tscn" id="3_7qifa"]
[ext_resource type="PackedScene" uid="uid://b52y2oas5lxmi" path="res://components/plateformer/input/input_component.tscn" id="4_58g2e"]
[ext_resource type="Texture2D" uid="uid://draug05tuwccy" path="res://assets/arthur/arthur_jump.png" id="5_f8sjr"]
[ext_resource type="PackedScene" uid="uid://cqd5fgbu71wo1" path="res://components/plateformer/movement/movement_component.tscn" id="5_pcu6j"]
[ext_resource type="Texture2D" uid="uid://dang6o2wmq0un" path="res://assets/arthur/arthur_run_0.png" id="6_j0a54"]
[ext_resource type="Texture2D" uid="uid://2yrvl5q35lux" path="res://assets/arthur/arthur_run_1.png" id="7_nlhr1"]
[ext_resource type="Texture2D" uid="uid://doeym36gsgjqs" path="res://assets/arthur/arthur_run_2.png" id="8_w214d"]
[ext_resource type="Texture2D" uid="uid://b00dv5ima8548" path="res://assets/arthur/arthur_run_4.png" id="9_26ay2"]
[ext_resource type="PackedScene" uid="uid://bw141wvxih2tk" path="res://components/plateformer/advanced_jump/advanced_jump_component.tscn" id="14_8ayyi"]
[ext_resource type="PackedScene" uid="uid://b8lnsm0ycy7q7" path="res://components/plateformer/animation/animation_component.tscn" id="14_o4lyq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m2mbh"]
radius = 20.0
height = 100.0

[sub_resource type="SpriteFrames" id="SpriteFrames_4hu4u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wwdx4")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_cng82")
}, {
"duration": 1.0,
"texture": ExtResource("3_0c3qb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_f8sjr")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_j0a54")
}, {
"duration": 1.0,
"texture": ExtResource("7_nlhr1")
}, {
"duration": 1.0,
"texture": ExtResource("8_w214d")
}, {
"duration": 1.0,
"texture": ExtResource("9_26ay2")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[node name="Arthur" type="CharacterBody2D" node_paths=PackedStringArray("animation_component", "gravity_component", "input_component", "movement_component", "jump_component")]
z_index = 15
collision_layer = 4
collision_mask = 11
script = ExtResource("1_rodkt")
animation_component = NodePath("AnimationComponent")
gravity_component = NodePath("GravityComponent")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
jump_component = NodePath("AdvancedJumpComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("CapsuleShape2D_m2mbh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_4hu4u")
animation = &"run"

[node name="GravityComponent" parent="." instance=ExtResource("3_7qifa")]

[node name="InputComponent" parent="." instance=ExtResource("4_58g2e")]

[node name="MovementComponent" parent="." instance=ExtResource("5_pcu6j")]
speed = 500.0
ground_accel_speed = 100.0
ground_decel_speed = 500.0
air_accel_speed = 50.0
air_decel_speed = 50.0

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("14_o4lyq")]
sprite = NodePath("../AnimatedSprite2D")

[node name="AdvancedJumpComponent" parent="." instance=ExtResource("14_8ayyi")]
jump_velocity = -500.0
